# Pypi-package-template

./: LICENSE  Makefile  README.md  requirements.txt  setup.cfg
src/tests/: test_setup.py
